--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -124,7 +124,7 @@
             <p>Domes</p>
           </div>
           <div class="filter" onclick="filterBycategory('Boathouse')">
-           <a href="/listings/category/<%=category%>"> <i class="fa-solid fa-sailboat"></i></a>
+         <i class="fa-solid fa-sailboat"></i>
             <p>Boathouse</p>
           </div>
         
